discussion/kv_engine/184191/184191_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53042: Use quota sharing memory stats to trigger the ItemPager

Change-Id: I4a1004b213675316dad332ae0ad13641d1c493d8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-16 17:27:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-16 18:13:44.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22229/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:100:32: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    void updateStat(const std::vector<E>& engines,
                               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22229/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:100:32:
error: no template named "vector" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22229/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51547/ : FAILURE

Failure of GoogleTest "EphemeralVBucketTest.DoublePageOut":

<pre>
[ RUN      ] EphemeralVBucketTest.DoublePageOut
unknown file: error: SEH exception with code 0xc0000005 thrown in the test body.
[  FAILED  ] EphemeralVBucketTest.DoublePageOut (3 ms)
EphemeralVBucketTest.DoublePageOut
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51547/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43268/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:100:32:
error: no template named "vector" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43268/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12036/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12036/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23796/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23796/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/987/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/987/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24693/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24693/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24271/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24271/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25553/ : FAILURE

ThreadSanitizer issue: SEGV /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:2756 in KVBucket::isCrossBucketHtQuotaSharing() const  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25553/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32690/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32690/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21837/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11947/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
